# interp-incongruent-3e42-gemini

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_gemini_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: Interpolation_between_Incongruent_Concepts_concept_superposition_polysemanticity_20260419_210639.jsonl  Interpolation_for_Incongruent_Concepts_linear_representation_hypothesis_informat_20260419_210408.jsonl
papers/: README.md
papers/pages/: 2211.05100_Schrodingers_Bat_Diffusion_Polysemy_manifest.txt
papers/pages/origins/: 2403.03867_Origins_of_Linear_Representations_manifest.txt
papers/pages/schrodingers_bat/: 2211.13095_Schrodingers_Bat_manifest.txt
papers/pages/toy_models/: 2209.10652_Toy_Models_of_Superposition_manifest.txt
results/: exp2_results.csv  exp3_results.csv  interpolation_results.csv
src/: analysis.py  experiment_1.py  experiment_2.py  experiment_3.py  final_analysis.py  list_saes.py  utils.py
