[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "sae-lens>=6.39.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformer-lens>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
